fix typeorm config

--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "tsc && ts-node node_modules/typeorm/cli.js",
-    "ts-node": "ts-node",
-    "tsc": "tsc"
+    "typeorm": "nest build & ts-node node_modules/typeorm/cli.js",
+    "ts-node": "ts-node"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
