--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/swagger": "^4.5.7",
     "@nestjs/typeorm": "^7.0.0",
     "bcrypt": "^4.0.1",
+    "builder-pattern": "^1.2.4",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "pg": "^8.1.0",
